--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>~ SV Marriage Cards ~</title>
+    <title>SV Marriage Cards</title>
+
+    <link rel="shortcut icon" type="image/png" href="./data/img/chicken.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
